<resources>
    <string name="app_name">BMI Calculator Test</string>
    <string name="appTitle">BMI Calculator!</string>
    <string name="heightTitle">Enter height: </string>
    <string name="heightUnit">cm</string>
    <string name="weightTitle">Enter weight: </string>
    <string name="weightUnit">kg</string>
    <string name="buttonSubmit">Calculate</string>
    <string name="resultTitle">BMI</string>
    <string name="resultInfo">Normal range: 18.5 - 24.9</string>
</resources>
