<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textAppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appTitle"
        android:textColor="@color/appText"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/cardWeight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.459" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardWeight"
        android:layout_width="300dp"
        android:layout_height="150dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.177">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weightTitle"
                android:textColor="@color/cardText"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.135" />

            <EditText
                android:id="@+id/inputWeight"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:ems="10"
                android:inputType="number"
                android:shadowColor="@color/cardText"
                android:textColor="@color/cardText"
                android:textColorHint="@color/cardText"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvWeight"
                app:layout_constraintVertical_bias="0.222" />

            <TextView
                android:id="@+id/tvWeightUnit"
                android:layout_width="36dp"
                android:layout_height="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/weightUnit"
                android:textColor="@color/cardText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/inputWeight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.644" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardHeight"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="288dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardWeight"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tvHeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/heightTitle"
                android:textColor="@color/cardText"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/inputHeight"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="number"
                android:shadowColor="@color/cardText"
                android:textColor="@color/cardText"
                android:textColorHint="@color/cardText"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvHeight"
                app:layout_constraintVertical_bias="0.296" />

            <TextView
                android:id="@+id/tvHeightUnit"
                android:layout_width="33dp"
                android:layout_height="30dp"
                android:text="@string/heightUnit"
                android:textColor="@color/cardText"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/inputHeight"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.691" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardBackground"
        android:elevation="100dp"
        android:text="@string/buttonSubmit"
        android:textColor="@color/cardText"
        android:textSize="20sp"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardHeight"
        app:layout_constraintVertical_bias="0.421" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="52dp"
        app:cardBackgroundColor="@color/cardBackground"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvResultTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultTitle"
                android:textAlignment="center"
                android:textColor="@color/cardText"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="-123dp"
                tools:layout_editor_absoluteY="610dp" />

            <TextView
                android:id="@+id/tvResultInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resultInfo"
                android:textAlignment="center"
                android:textColor="@color/cardText" />

            <TextView
                android:id="@+id/tvResultOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/cardText"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvResultDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/cardText" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>